@@ -1,3 +1,5 @@
+DECL|function|QSignalBlocker
+DECL|function|QSignalBlocker
 DECL|function|connect
 DECL|function|qFindChild
 DECL|function|qFindChildren
@@ -5,6 +7,9 @@ DECL|function|qFindChildren
 DECL|function|qobject_cast
 DECL|function|qobject_cast
 DECL|function|qobject_interface_iid
+DECL|function|reblock
+DECL|function|unblock
+DECL|function|~QSignalBlocker
 DECL|macro|QOBJECT_H
 DECL|macro|Q_DECLARE_INTERFACE
 DECL|macro|Q_SET_OBJECT_NAME
